--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 <body>
     <div id="header">
         <div id="container">
+            <div class="row">
+            </div>
             <nav> 
+                <div class="col-6"></div>
                 <img src="images/NAME.png" class="logo">
+                <div class="col-6">
                 <ul id="sidemenu">
+                    <div class="row"></div>
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#projects">My Projects</a></li>
@@ -20,6 +25,7 @@
                     <li><a href="#contact">Contact</a></li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
+            </div>
                 <i class="fa-solid fa-ellipsis-vertical" onclick="openmenu()"></i>
             </nav>
            
@@ -37,10 +43,13 @@
     <div id="about">
         <div class="container">
             <div class="row">
+                <div class="col-12">
                 <div class="about-col-1">
                     <img src="images/image2.jpeg">
                 </div> 
+            </div>
                 <div class="about-col-2">
+                    <div class="col-12">
                     <h1 class="sub-title">About Me</h1>
                     <p class="para">I am Akshaya, a fresher with a little knowledge of Web development, trying to create websites with the knowledge I have and improving my skills day by day through Internet.<br>The skills I have towards web development is self-taught.<br>I'm very much interested in Singing and Playing music instruments. I'm an avid traveller, foodie,and Occasional Badminton player.
                         </p>
@@ -64,9 +73,10 @@
                             </ul>
                         </div><div class="tab-contents" id="Experience">
                             <ul>
-                                <li><span>November 2022 - present  &nbsp; Bharat Electronics Limited, Hyderabad, Telangana.</span><br>Apprentice in Development and Engineering Department, Army Division.</li>
+                                <li></li>
                             </ul>
                         </div>
+                    </div>  
                 </div>
             </div>
         </div>
