--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
     <div id="about">
         <div class="container">
             <div class="row">
-                <div class="col-12">
+                <div class="col-md-12">
                 <div class="about-col-1">
-                    <img src="images/image2.jpeg">
+                    <img src="images/Akshaya.png">
                 </div> 
+            </div>
             </div>
                 <div class="about-col-2">
                     <div class="col-12">
@@ -61,8 +62,8 @@
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
                                 <li><span>Programming Languages</span><br>C, C++, and Full Java</li>
-                                <br><li><span>Web technologies</span><br>HTML (Hypertext markup language), CSS (Cascading style sheets), JavaScript, and jQuery</li>
-                                <br><li><span>Tools and IDE</span><br>NetBeans, MS Office, and Eclipse</li>
+                                <br><li><span>Web technologies</span><br>HTML (Hypertext markup language), CSS (Cascading style sheets), JavaScript, Bootsrap, and jQuery</li>
+                                <br><li><span>Business Analyst Tools</span><br>SQL(Structured Query language), PowerBi, and Office 365</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="Education">
@@ -73,7 +74,17 @@
                             </ul>
                         </div><div class="tab-contents" id="Experience">
                             <ul>
-                                <li></li>
+                                <li><span><b>Business Analyst Intern </b>May 2023 - January 2024</span><br> <b>Pixentia Solutions India Pvt Ltd</b><br>
+                                    • Manage the day-to-day operations and maintenance of the Learning Management System (LMS) by collaborating with Learning Business Partners, Project Managers, and Instructional Designers.<br>
+• Develop and update standardized tools and reporting for ongoing access to learning information; generate standard and custom reports.<br>
+• Provide end-user troubleshooting, issue remediation, and technology request assistance.<br>
+• Ensure the LMS functionality and training content is running properly without interruption.<br>
+• Troubleshooting the existing learning content issues.<br>
+• Approve user logins as needed and assign user permissions and roles.<br>
+• Create and manage user organizational unit structures including the creation of user groups.<br>
+• Create and maintain all LMS element functionality including Content Integration and Creation, Curriculum, Course Catalog, LMS User experience, and Reporting.<br>
+• Create and manage user organizational unit structures including the creation of user groups
+                                </li>
                             </ul>
                         </div>
                     </div>  
@@ -112,7 +123,7 @@
         <div class="container">
             <h1 class="sub-title">My Portfolio</h1>
             <div class="resume">
-                <a href="https://app.luminpdf.com/viewer/63b6c2e2a4a678612bf89d7c" download>Download CV</a>
+                <a href="images/Akshaya Eluka CV.pdf" download>Download CV</a>
             </div>
         </div>
     </div>
