--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="about-col-2">
                     <div class="col-12">
                     <h1 class="sub-title">About Me</h1>
-                    <p class="para">I am Akshaya, a fresher with a little knowledge of Web development, trying to create websites with the knowledge I have and improving my skills day by day through Internet.<br>The skills I have towards web development is self-taught.<br>I'm very much interested in Singing and Playing music instruments. I'm an avid traveller, foodie,and Occasional Badminton player.
+                    <p class="para">I am Akshaya, a fresher with a little knowledge of Web development, trying to create websites with the knowledge I have and improving my skills day by day through Internet.<br>The skills I have towards web development is self-taught. I have hands-on SQL during my Internship where I played a Learning Management Systems Administrator role for Sumtotal.<br>I'm very much interested in Singing and Playing music instruments. I'm an avid traveller, foodie,and Occasional Badminton player.
                         </p>
                         <div class="tab-titles">
                             <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
