--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="row">
                 <div class="col-md-12">
                 <div class="about-col-1">
-                    <img src="images/Akshaya.png">
+                    <img src="images/Akshaya1.png">
                 </div> 
             </div>
             </div>
